# Anuvis

./: .gitignore  Cargo.toml
src/: frame_pipeline.rs  main.rs  video_pipeline.rs
src/host/: mod.rs  ux_loop.rs  ux_message.rs  vite_server.rs
src/pipeline_steps/: canny_edge_detection.rs  double_thresholding.rs  eight_conn_edge_tracker.rs  gaussian_blur.rs  gradient_calculation.rs  mod.rs  non_max_suppression.rs
ui/: package-lock.json
ui/src/: App.tsx
