[package]
name = "anuvis"
version = "0.1.0"
edition = "2021"

[profile.dev]
debug = 2
opt-level = 0
debug-assertions = true

[profile.release]
debug = 1

[dependencies]
clap = { version = "4.4", features = ["derive"] }
gstreamer = "0.23.4"
gstreamer-app = "0.23.4"
image = "0.25.5"
wide = "0.7.30"
wry = "0.28"
tao = "0.19"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.28", features = ["full"] }
include_dir = "0.7"
which = "4.4"
portpicker = "0.1"
reqwest = { version = "*" }
base64 = "0.13"
